--- a/src/main/resources/assets/modularmaterials/lang/en_us.lang
+++ b/src/main/resources/assets/modularmaterials/lang/en_us.lang
@@ -1,5 +1,6 @@
 # debug
 item.modularmaterials.debug.name=§cInvalid Item
+tile.modularmaterials.debug.name=§cInvalid Block
 
 # creative tabs
 itemGroup.modularmaterials.blocks=Modular Materials: Blocks
