--- a/src/main/resources/assets/modularmaterials/lang/en_us.json
+++ b/src/main/resources/assets/modularmaterials/lang/en_us.json
@@ -1,5 +1,6 @@
 {
     "itemGroup.modularmaterials.blocks": "Modular Materials: Blocks",
+    "itemGroup.modularmaterials.ores": "Modular Materials: Ores",
     "itemGroup.modularmaterials.items": "Modular Materials: Items",
-    "itemGroup.modularmaterials.ores": "Modular Materials: Ores"
+    "itemGroup.modularmaterials.fluids": "Modular Materials: Fluids"
 }
